# companion

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
acp-http-transport/: Cargo.toml  README.md
acp-http-transport/src/: client.rs  lib.rs  server.rs  tests.rs
connectors/telegram-acp/: .env.example  LICENSE  README.md  pyproject.toml
connectors/telegram-acp/src/telegram_acp/: __init__.py  acp.py  config.py  http_transport.py  main.py
connectors/telegram-acp/tests/: test_acp.py  test_config.py  test_http_transport.py  test_main.py
docs/: deployment-setup.md
gateway/acp-gateway/: Cargo.toml  Dockerfile  README.md
gateway/acp-gateway/policies/: default.cedar  schema.cedarschema
gateway/acp-gateway/src/: config.rs  error.rs  frontend_host.rs  gateway.rs  main.rs  policy.rs  pool.rs  service.rs  spawn.rs  tests.rs
harness/: Cargo.toml  README.md
harness/examples/: local.json  with_mcp.json
harness/sandbox/: runner.py  test_runner.py
harness/src/: agent.rs  agent_loop.rs  config.rs  error.rs  lib.rs  llm.rs  main.rs  mcp.rs  policy.rs  sandbox.rs  session.rs  session_manager.rs  session_store.rs  tool.rs  tool_runtime.rs
poc-site/: README.md  index.html  package.json  script.js  styles.css  vercel.json
scripts/: coverage.sh
