[package]
name = "acp-http-transport"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Reusable HTTP transport for ACP over streamable HTTP"

[dependencies]
axum = { version = "0.8", features = ["http1", "json", "tokio"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
bytes = "1"
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
agent-client-protocol = { version = "0.10", features = [] }
async-trait = "0.1"
