[package]
name = "harness"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Minimalistic ACP agent harness with MCP tool access, code-mode execution, and Cedar policies"

[[bin]]
name = "harness"
path = "src/main.rs"

[lib]
name = "harness"
path = "src/lib.rs"

[dependencies]
agent-client-protocol = { version = "0.10", features = ["unstable_session_close", "unstable_session_model", "unstable_session_fork", "unstable_session_resume"] }
async-openai = "0.28"
async-trait = "0.1"
cedar-policy = "4"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tempfile = "3"
libc = "0.2"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
