[project]
name = "telegram-acp"
version = "0.1.0"
description = "A Telegram-to-ACP connector. Bridge any Telegram bot to any ACP-compatible agent."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Nacho Garay" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "python-telegram-bot>=21.0",
    "pydantic-settings>=2.0",
    "agent-client-protocol>=0.8.1",
]

[project.urls]
Homepage = "https://github.com/humans-first/companion"
Repository = "https://github.com/humans-first/companion"
Issues = "https://github.com/humans-first/companion/issues"

[project.scripts]
telegram-acp = "telegram_acp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_acp"]

[tool.hatch.build.targets.sdist]
include = ["src/telegram_acp", "LICENSE", "README.md"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.9"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
