[project]
name = "telegram-acp"
version = "0.1.0"
description = "A Telegram-to-ACP connector. Bridge any Telegram bot to any ACP-compatible agent."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Nacho Garay" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "python-telegram-bot>=21.0",
    "pydantic-settings>=2.0",
    "agent-client-protocol>=0.8.1",
    "httpx>=0.28",
    "opentelemetry-api>=1.20",
]

[project.urls]
Homepage = "https://github.com/humans-first/companion"
Repository = "https://github.com/humans-first/companion"
Issues = "https://github.com/humans-first/companion/issues"

[project.scripts]
telegram-acp = "telegram_acp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_acp"]

[tool.hatch.build.targets.sdist]
include = ["src/telegram_acp", "LICENSE", "README.md"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=6.0", "ruff>=0.9", "mypy>=1.13"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle — no mandatory docstrings
    "ANN",     # flake8-annotations — no forced annotations everywhere
    "ERA",     # eradicate — allow commented-out code
    "FIX",     # allow fixme/todo comments
    "TD",      # no todo format enforcement
    "S101",    # assert in tests is fine
    "TC",      # type-checking import blocks — not worth the churn
    "BLE001",  # broad except Exception — intentional in error handlers
    "TRY301",  # abstract raise into inner function — over-engineering
    "EM",      # string literals in exceptions — not worth it
    "TRY003",  # long exception messages — fine for us
    "COM812",  # trailing comma — conflicts with formatter
    "FBT",     # boolean positional args — fine for internal constructors
    "PLW0603", # global statement — needed for deferred init pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S",       # security checks not relevant in tests
    "SLF001",  # tests need to access private members
    "PLR2004", # magic values in assertions are fine
    "PLR0913", # many args in test helpers are fine
    "PLC0415", # imports inside test functions are fine
    "ARG001",  # unused args in mock callbacks are fine
    "PERF401", # async list comprehension not worth it in tests
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["telegram_acp"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["telegram_acp"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 40
