[package]
name = "acp-gateway"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "ACP gateway proxy with session ID mapping and agent process management"

[[bin]]
name = "acp-gateway"
path = "src/main.rs"

[dependencies]
agent-client-protocol = { version = "0.10", features = [] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
shell-words = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v7"] }
cedar-policy = "4"
futures = "0.3"
libc = "0.2"
serde_json = { version = "1", features = ["raw_value"] }

[dev-dependencies]
piper = "0.2"
tempfile = "3"
tokio-test = "0.4"

[features]
default = []
unstable = [
    "unstable_session_close",
    "unstable_session_fork",
    "unstable_session_model",
    "unstable_session_resume",
]
unstable_session_close = ["agent-client-protocol/unstable_session_close"]
unstable_session_fork = ["agent-client-protocol/unstable_session_fork"]
unstable_session_model = ["agent-client-protocol/unstable_session_model"]
unstable_session_resume = ["agent-client-protocol/unstable_session_resume"]

# Needed for tokio::time::pause/advance in tests. The main dep already has "full".
# We add test-util via a feature gate on the dev-dependency.
[dev-dependencies.tokio]
version = "1"
features = ["full", "test-util"]
